riscv: defconfig: update SCRx RV64 config
Enable SBI console.

Signed-off-by: Sergey Matyukevich <sergey.matyukevich@syntacore.com>

--- a/arch/riscv/configs/vcu118_scr_rv64_defconfig
+++ b/arch/riscv/configs/vcu118_scr_rv64_defconfig
@@ -31,7 +31,7 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_KCMP=y
 CONFIG_USERFAULTFD=y
 CONFIG_CPU_RV_SCR=y
-# CONFIG_RISCV_SBI_V01 is not set
+CONFIG_RISCV_SBI_V01=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -65,6 +65,8 @@ CONFIG_DP83867_PHY=y
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_OF_PLATFORM=y
+CONFIG_HVC_DRIVER=y
+CONFIG_HVC_RISCV_SBI=y
 CONFIG_HW_RANDOM=y
 CONFIG_SIFIVE_PLIC=y
 CONFIG_POWER_RESET=y
